--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 </head>
 
 <body>
-
   <div class="footerWrap">
 
     <header>    
       <div id="headflex">
           <h1>Chris Walden</h1>
       </div> <!-- head flex -->
-
     </header>
 
     <div id="mainZone">
@@ -27,9 +25,7 @@
 
         <section id="content">
 
-          <h2>
-            About me
-          </h2>
+          <h2> About me </h2>
 
           <img src="assets/images/picypic.jpg" id="profilepic" alt="profilepic">
 
